--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 osx_image: xcode7.3
 script:
-   - xcodebuild -project ELKeychain.xcodeproj -scheme ELKeychain -sdk iphonesimulator build test
+   - xctool -project ELKeychain.xcodeproj -scheme ELKeychain -sdk iphonesimulator build test
