--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
 osx_image: xcode9.1
 script:
-   - xcodebuild -project ELKeychain.xcodeproj -scheme ELKeychain -sdk iphonesimulator test -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.3' CODE_SIGNING_REQUIRED=NO
+   - xcodebuild -project ELKeychain.xcodeproj -scheme ELKeychain -sdk iphonesimulator test -destination 'OS=11.1,name=iPhone X' CODE_SIGNING_REQUIRED=NO
