--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
 osx_image: xcode9.3
 script:
-   - xcodebuild -project ELKeychain.xcodeproj -scheme ELKeychain -sdk iphonesimulator test -destination 'OS=11.1,name=iPhone X' CODE_SIGNING_REQUIRED=NO
+   - xcodebuild -project ELKeychain.xcodeproj -scheme ELKeychain -sdk iphonesimulator clean test -destination 'OS=11.1,name=iPhone X' CODE_SIGNING_REQUIRED=NO
+   - xcodebuild -project ELKeychain.xcodeproj -scheme ELKeychain_static -sdk iphonesimulator clean build -destination 'OS=11.1,name=iPhone X' CODE_SIGNING_REQUIRED=NO
